Tools/qmake/sync.profile
@@ -1,3 +1,4 @@
 # This file is only used for config tests
 %configtests = (
+    fontconfig => {},
 );
